# Minecraft4k-CPP

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  Constants.h  Minecraft4k.cpp  Minecraft4k.sln  Minecraft4k.vcxproj  Minecraft4k.vcxproj.filters  README.md  Shader.cpp  Shader.h  TextureGenerator.cpp  TextureGenerator.h  Util.cpp  Util.h  Vector.cpp  Vector.h  World.cpp  World.h  compress.bat  glad.c  packages.config  shader_code.h
embedFiles/: CMakeLists.txt  readme.md
embedFiles/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
embedFiles/src/: CMakeLists.txt
embedFiles/src/embed/: types.cc  types.h
embedFiles/tools/: CMakeLists.txt  embed_binary.cpp  embed_text.cc
include/: glad.h
include/glad/: glad.h
res/: raytrace.comp  screen.frag  screen.vert
